Fix weird margin on error on project proposal page
For some reason the errors on a project proposal page were, when on small screens, covering up the label text

--- a/app/styles/pages/_project-proposal.scss
+++ b/app/styles/pages/_project-proposal.scss
@@ -30,6 +30,13 @@
       color: $text-color;
       text-decoration: none;
     }
+    .editDefinition {
+      .error {
+        @include media-max-width($large) {
+          margin-top: 4px;
+        }
+      }
+    }
     .flag, .negative {
       display: inline-block;
       margin-right: 10px;
